# Sword-And-Stone

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGES_SUMMARY.md  CMakeLists.txt  CRIMSON_ISLES_SETUP.md  CURRENT_STATUS.md  DEVELOPMENT.md  FINAL_PROJECT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ISOMETRIC_README.md  PLAYER_MOVEMENT_FIX.md  PROJECT_SUMMARY.txt  PR_SUMMARY.md  QUICKSTART.md  QUICKSTART_CRIMSON_ISLES.md  QUICKSTART_ISOMETRIC.md  README.md  SCENE_ARCHITECTURE.md  STRUCTURE_AND_FEASIBILITY.md  WASD_MOVEMENT_FIX_SUMMARY.md  _codeql_detected_source_root  create_tileset_preview.py  generate_isometric_tileset.gd  generate_isometric_tileset.py  generate_player_sprite.py  generate_tileset.py  generate_tileset_standalone.gd  project.godot  validate_2d_implementation.py  validate_scenes.py  verify_fix.sh
.github/: copilot-instructions.md
addons/zylann.voxel/: PLATFORM_BINARIES.md  README.md  download_linux_binaries.sh  download_windows_binaries.ps1
archived_cpp/: CPP_RESTRUCTURING.md  README.md
archived_cpp/include/engine/: Engine.h  InputManager.h
archived_cpp/include/game/: Player.h
archived_cpp/include/platform/: Platform.h
archived_cpp/include/renderer/: DirectX11Renderer.h  DirectX12Renderer.h
archived_cpp/src/: main.cpp
archived_cpp/src/engine/: TimeManager.cpp
archived_cpp/src/game/: CMakeLists.txt  GameWorld.cpp  Player.cpp  VoxelSystem.cpp
archived_cpp/src/renderer/: DirectX11Renderer.cpp
archived_cpp/tests/: test_main.cpp
assets/: README.md
assets/textures/: README.md
docs/: 2D_CHANGELOG.md  2D_IMPLEMENTATION_SUMMARY.md  2D_QUICK_REFERENCE.md  2D_WORLD_GENERATION.md  ADDON_INTEGRATION_STATUS.md  ARCHITECTURE.md  ASSETLIB_GUIDE.md  BUGFIX_SUMMARY.md  CONVERSION.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  GODOT_ALIGNMENT_SUMMARY.md  GODOT_VOXEL_IMPLEMENTATION.md  GODOT_VOXEL_INTEGRATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_QUICKSTART.md  METADATA_IMPLEMENTATION.md  MIGRATION_GUIDE.md  PHYSICS_IMPLEMENTATION_SUMMARY.md  PHYSICS_SYSTEM.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_ASSESSMENT.md  PROJECT_SUMMARY.md  PR_SUMMARY.md  QUICKSTART.md  QUICKSTART_GODOT_VOXEL.md  README.md  TASK_COMPLETION_SUMMARY.md  TESTING_ADDON.md  TEXTURE_FIXES.md  WINDOWS_SETUP.md  WORLD_GENERATION_FIX.md  WORLD_GENERATION_MEDIEVAL.md
include/engine/: TimeManager.h  Window.h
include/game/: GameWorld.h  VoxelSystem.h
include/renderer/: IRenderer.h  OpenGLRenderer.h
materials/: cel_material.tres
resources/: README.md
resources/items/: battle_axe.gd  battle_axe.tres  iron_chestplate.gd  iron_chestplate.tres  iron_sword.gd  iron_sword.tres  steel_longsword.gd  steel_longsword.tres
resources/materials/: cel_material.tres
resources/recipes/: battle_axe_recipe.tres  iron_chestplate_recipe.tres  iron_sword_recipe.tres  steel_longsword_recipe.tres
scenes/: README.md  hud.tscn  main.tscn
scenes/dungeons/: README.md  dungeon_template.tscn
scenes/examples/: physics_demo.tscn
scenes/main/: crimson_isles_main.tscn  isometric_main.tscn  main.tscn
scenes/test/: validate_voxel_addon.tscn  voxel_terrain_test.tscn
scripts/: README.md
scripts/autoload/: game_manager.gd  input_helper.gd  isometric_tileset_loader.gd  physics_manager.gd  texture_loader.gd  tileset_generator.gd  time_manager.gd  world_state_manager.gd
scripts/crafting/: anvil_station.gd  crafting_station.gd
scripts/entities/player/: isometric_player.gd  player_controller.gd  topdown_player.gd
scripts/items/: item.gd
scripts/player/: player_controller.gd
scripts/scenes/: crimson_isles_main.gd
scripts/systems/building/: isometric_building_system.gd
scripts/systems/crafting/: anvil_station.gd  crafting_station.gd
scripts/systems/effects/: day_night_cycle.gd  water_animator.gd
scripts/systems/inventory/: armor.gd  inventory.gd  weapon.gd
scripts/systems/physics/: README.md  falling_block.gd  physics_debugger.gd  physics_item.gd  physics_trigger.gd  projectile.gd
scripts/systems/voxel/: chunk.gd  voxel_type.gd
scripts/systems/world_generation/: biome_generator.gd  isometric_decorations.gd  isometric_world_generator.gd  structure_generator.gd  tree_generator.gd  voxel_terrain_generator.gd  world_generator.gd  world_generator_2d.gd
scripts/ui/: hud.gd  isometric_hud.gd
scripts/utils/: generate_player_sprite.gd  generate_tileset_tool.gd  isometric_tile_generator.gd  physics_test_spawner.gd  player_sprite_generator.gd  texture_gen_tool.gd  texture_generator.gd  tile_texture_generator_2d.gd  validate_voxel_addon.gd
scripts/voxel/: chunk.gd  voxel_type.gd
scripts/world_generation/: world_generator.gd
shaders/: cel_shader.gdshader  cel_shader_2d.gdshader  cel_shader_simple.gdshader
src/engine/: CMakeLists.txt  Engine.cpp  InputManager.cpp  Window.cpp
src/platform/: CMakeLists.txt  Platform.cpp
src/renderer/: CMakeLists.txt  DirectX12Renderer.cpp  OpenGLRenderer.cpp  RendererFactory.cpp
tests/: CMakeLists.txt  test_autoloads.gd  test_autoloads.tscn  test_player_movement.gd  test_renderer.cpp
